--- a/validation/results/validate_wy.Rmd
+++ b/validation/results/validate_wy.Rmd
@@ -109,7 +109,6 @@ With a small number of blocks/clusters, we may not properly estimate the spread 
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list <- sim.params.default
 sim.params.list[['B']] <- 1000
 
 model.params.list[['K']] <- 1
@@ -133,7 +132,7 @@ Constant effects
 d_m <- "d2.1_m2fc"
 model.params.list[['omega.2']] <- NULL
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d2.1_m2fc_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d2.1_m2fc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d2.1_m2fc_power_plot)
 ```
 \newpage
@@ -143,7 +142,7 @@ Fixed effects
 d_m <- "d2.1_m2ff"
 model.params.list[['omega.2']] <- model.params.default[['omega.2']]
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d2.1_m2ff_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d2.1_m2ff_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d2.1_m2ff_power_plot)
 ```
 \newpage
@@ -153,7 +152,7 @@ Random effects
 d_m <- "d2.1_m2fr"
 model.params.list[['omega.2']] <- model.params.default[['omega.2']]
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d2.1_m2fr_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d2.1_m2fr_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d2.1_m2fr_power_plot)
 ```
 
@@ -181,7 +180,7 @@ model.params.list[['MDES']] <- rep(0.25, M)
 ```{r}
 d_m <- "d2.2_m2rc"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d2.2_m2rc_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d2.2_m2rc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d2.2_m2rc_power_plot)
 ```
 
@@ -190,7 +189,6 @@ print(d2.2_m2rc_power_plot)
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list <- sim.params.default
 sim.params.list[['B']] <- 100
 
 # assumptions
@@ -200,15 +198,19 @@ model.params.list[['numCovar.2']] <- 0
 model.params.list[['R2.2']] <- NULL
 
 # for a reasonable runtime and power
-model.params.list[['nbar']] <- 20
-model.params.list[['J']] <- 20
-model.params.list[['K']] <- 20
+model.params.list[['nbar']] <- 100
+model.params.list[['J']] <- 5
+model.params.list[['K']] <- 5
+model.params.list[['ICC.2']] <- rep(0.1, M)
+model.params.list[['ICC.3']] <- rep(0.1, M)
+model.params.list[['omega.2']] <- rep(0.05, M)
+model.params.list[['omega.3']] <- rep(0.05, M)
 ```
 
 ```{r}
 d_m <- "d3.1_m3rr2rr"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d3.1_m3rr2rr_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d3.1_m3rr2rr_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d3.1_m3rr2rr_power_plot)
 ```
 
@@ -217,39 +219,54 @@ print(d3.1_m3rr2rr_power_plot)
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list <- sim.params.default
-sim.params.list[['B']] <- 1000
+sim.params.list[['B']] <- 100
 
 # assumptions
 model.params.list[['omega.2']] <- NULL
 model.params.list[['omega.3']] <- NULL
 
-# for a reasonable power
-model.params.list[['J']] <- 40
-model.params.list[['K']] <- 20
-model.params.list[['MDES']] <- rep(0.25, M)
-model.params.list[['ICC.3']] <- rep(0.1, M)
-model.params.list[['ICC.2']] <- rep(0.1, M)
+# for a reasonable runtime and power
+model.params.list[['J']] <- 10
+model.params.list[['K']] <- 10
+model.params.list[['nbar']] <- 100
+model.params.list[['MDES']] <- rep(0.3, M)
+model.params.list[['ICC.3']] <- rep(0.05, M)
+model.params.list[['ICC.2']] <- rep(0.05, M)
+model.params.list[['R2.1']] <- rep(0.4, M)
+model.params.list[['R2.2']] <- rep(0.4, M)
+model.params.list[['R2.3']] <- rep(0.4, M)
 ```
 
 ```{r}
 d_m <- "d3.3_m3rc2rc"
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d3.3_m3rc2rc_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d3.3_m3rc2rc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d3.3_m3rc2rc_power_plot)
 ```
 
+\newpage
 # d3.2 models
 
 ```{r}
 model.params.list <- model.params.default
-sim.params.list <- sim.params.default
-sim.params.list[['B']] <- 1000
 
 # assumptions
 model.params.list[['numCovar.3']] <- 0
 model.params.list[['R2.3']] <- NULL
 model.params.list[['omega.2']] <- NULL
+
+# for reasonable power and runtime
+model.params.list[['nbar']] <- 50
+model.params.list[['J']] <- 5
+model.params.list[['K']] <- 10
+model.params.list[['MDES']] <- rep(0.25, M)
+model.params.list[['ICC.3']] <- rep(0.1, M)
+model.params.list[['ICC.2']] <- rep(0.1, M)
+model.params.list[['R2.1']] <- rep(0.4, M)
+model.params.list[['R2.2']] <- rep(0.4, M)
+model.params.list[['R2.3']] <- rep(0.4, M)
+
+sim.params.list[['B']] <- 100
 ```
 
 Constant effects
@@ -258,7 +275,7 @@ Constant effects
 d_m <- "d3.2_m3ff2rc"
 model.params.list[['omega.3']] <- NULL
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d3.2_m3ff2rc_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d3.2_m3ff2rc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d3.2_m3ff2rc_power_plot)
 ```
 
@@ -267,14 +284,23 @@ Random effects
 
 ```{r}
 # for reasonable power and runtime
-model.params.list[['nbar']] <- 30
-model.params.list[['J']] <- 15
-model.params.list[['K']] <- 15
-model.params.list[['MDES']] <- rep(0.25, M)
+sim.params.list[['B']] <- 100
 
+model.params.list[['nbar']] <- 100
+model.params.list[['J']] <- 5
+model.params.list[['K']] <- 5
+model.params.list[['MDES']] <- rep(0.25, M)
+model.params.list[['ICC.3']] <- rep(0.1, M)
+model.params.list[['ICC.2']] <- rep(0.1, M)
+model.params.list[['R2.1']] <- rep(0.4, M)
+model.params.list[['R2.2']] <- rep(0.4, M)
+model.params.list[['R2.3']] <- rep(0.4, M)
+```
+
+```{r}
 d_m <- "d3.2_m3rr2rc"
-model.params.list[['omega.3']] <- model.params.default[['omega.3']]
+model.params.list[['omega.3']] <- rep(0.05, M)
 params.file.base <- gen_params_file_base(model.params.list, sim.params.list, d_m)
-d3.2_m3rr2rc_power_plot <- gen.power.results.plot(params.file.base, d_m)
+d3.2_m3rr2rc_power_plot <- gen.power.results.plot(params.file.base, d_m, small.font = TRUE)
 print(d3.2_m3rr2rc_power_plot)
 ```
