fix here package issue

--- a/project_tracker.Rmd
+++ b/project_tracker.Rmd
@@ -16,6 +16,10 @@ Updated: Dec 28 by KH
 
 # Package updates
 
+*High priority*
+
+- fix plot for D1indiv power for grid (KH)
+
 *Medium priority*
 
 - write simulation correlation tool (KH)
