--- a/manuscript/PUMP_Manuscript.Rmd
+++ b/manuscript/PUMP_Manuscript.Rmd
@@ -8,8 +8,8 @@ output:
     df_print: paged
 bibliography: refs.bib
 header-includes:
-  - \usepackage{setspace}
   - \usepackage{color}
+  - \usepackage{hyperref}
 editor_options: 
   chunk_output_type: console
 ---
@@ -121,7 +121,7 @@ These additional functions include:
 - `update()` to re-run an existing calculation with a small number of parameters updated.
 - `plot()` on any `PUMP`-generated object to generate plots (including grid outputs).
 
-The authors of the `PUMP` package have also created a web application built with R Shiny. This web application calls the `PUMP` package and allows users to conduct calculations with a user-friendly interface, but it is less flexible than the package, with a focus on simpler scenarios (e.g., 10 or fewer outcomes). The app can be found at www.pumpmdrc.io.  
+The authors of the `PUMP` package have also created a web application built with R Shiny. This web application calls the `PUMP` package and allows users to conduct calculations with a user-friendly interface, but it is less flexible than the package, with a focus on simpler scenarios (e.g., 10 or fewer outcomes). The app can be found at \url{www.pumpmdrc.io}.  
 
 The remainder of this paper is organized as follows.
 In Section \ref{sec:diplomas}, we introduce Diplomas Now, an educational experiment, to be used as a running example throughout the paper.
@@ -359,11 +359,10 @@ Repeating these permutations a large number of times, results in a distribution 
 Because the actual data are used to generate this null distribution, correlations among the test statistics are captured.
 Then observed test statistics can be compared with the distribution of test statistics under the complete null hypothesis.\footnote{Instead of using test statistics, the Westfall-Young MTPs can alternatively compare raw $p$-values with the estimated joint null distribution of $p$-values.}
 
-\textcolor{red}{KH Note: I am not editing this paragraph in case we rewrite it with correlation tool.}
 The correlation between test statistics is a parameter a researcher must specify in order to estimate power, MDES or sample size requirements when using an MTP.
-The $M$ pairwise correlations are equal to the $M$ pairwise correlations between the residuals in the $M$ impact models.
-If there are no covariates in the impact models or if the $R^2$’s of the covariates are equivalent in all impact models, then the correlations between the test statistics are equal to the correlations between the outcomes.
-However, having different $R^2$’s across the impact models reduces the correlations between the residuals and therefore between test statistics.\footnote{For example, one of the multiple outcomes may have a baseline covariate with a high $R^2$ while another may have a baseline covariate with
+The ${M \choose 2}$ pairwise correlations between test statistics are equal to the $M$ pairwise correlations between the residuals in the $M$ regression models.
+If there are no covariates in the regression models or if the $R^2$’s of the covariates are equivalent in all regression models, then the correlations between the test statistics are equal to the correlations between the outcomes.
+However, having different $R^2$’s across the regression models reduces the correlations between the residuals and therefore between test statistics.\footnote{For example, one of the multiple outcomes may have a baseline covariate with a high $R^2$ while another may have a baseline covariate with
 a smaller $R^2$. Also, block dummies may explain more variation in some outcomes than in others.}
 Models of outcomes that are highly correlated are more likely to have residuals that are highly correlated because baseline covariates will tend to have similar $R^2$’s.
 The gaps between the correlations between outcomes and the correlations between residuals --- and therefore the test statistics --- may be wider for moderately or weakly correlated outcomes.
@@ -402,7 +401,7 @@ This process would involve specifying parameter values such as $R^2$, the amount
 
 2. *Estimate impacts on the simulated data.*
 Given simulated data, we could fit $M$ regression models (specified to match the experimental design and model assumptions).
-For the models supported by `PUMP`, the relevant functions would be `lm()`, `lmer()` from the `lme4` library (@lme4), and `interacted_linear_estimators()` from the `blkvar` library.\footnote{This package is currently under development on GitHub; see https://github.com/lmiratrix/blkvar}
+For the models supported by `PUMP`, the relevant functions would be `lm()`, `lmer()` from the `lme4` library (@lme4), and `interacted_linear_estimators()` from the `blkvar` library.\footnote{This package is currently under development on GitHub; see \url{https://github.com/lmiratrix/blkvar}}
 From the model output we extract the test statistics $t_m$ for the estimated impacts, one statistic for each outcome, along with estimated standard errors.
 
 3. *Calculate unadjusted $p$-values.*
@@ -1058,7 +1057,7 @@ We introduce the power under multiplicity project (`PUMP`) `R` package, which es
 `PUMP` allows users to estimate power, MDES, and sample size requirements for a wide variety of commonly used RCT designs and models across different definitions of power and applying different MTPs.
 The functionality of `PUMP` fills an important gap, as existing tools do not allow researchers to conduct power, MDES or sample size calculations when applying a MTP.
 
-The main advantage of the `PUMP` package is to provide easily accessible estimation procedures so that users can properly account for power when making adjustments for multiple hypothesis testing. Users can also take advantage of the `PUMP` in an online interface at www.mdrcpump.io.
+The main advantage of the `PUMP` package is to provide easily accessible estimation procedures so that users can properly account for power when making adjustments for multiple hypothesis testing. Users can also take advantage of the `PUMP` in an online interface at \url{www.mdrcpump.io}.
 However, one of the additional strengths of the package is the ease with which a user can explore the impact of different designs, models, and assumptions on power, MDES or sample size.
 Even if a user is only interested in a single outcome, `PUMP` provides useful functionality for more robust power calculations.
 A user can and should try a range of parameter values to determine the sensitivity of the power of their study to different assumptions; this package simplifies that process.
